end of day, adding session